Avoid reposition on scrollbar displayed

--- a/css/common.css
+++ b/css/common.css
@@ -41,9 +41,9 @@ table tr td {
 
 #footer {
     position: absolute;
-    bottom: 0px;
+    bottom: -1px;
     width: 100%;
-    height: 90px;
+    height: 91px;
     text-align: center;
 }
 
